--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux-github-viewer",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://isseifukata.github.io/redux-github-viewer",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@heroicons/react": "^1.0.4",
@@ -32,7 +33,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +57,7 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.25.1"
+    "eslint-plugin-react": "^7.25.1",
+    "gh-pages": "^3.2.3"
   }
 }
